examples/errors/defined2.spl
foo() {
    var aap = 731;
    return aap;
}

var aap = 137;

main() {return;}